# cskills

./: AGENTS.md  dtk-interface-usage-report.md
.verification/: verification-plan.md  verification-report.md
.verification/evals/: eval-template.md
dde-control-center-development/: SKILL.md  verification-plan.md
dde-control-center-development/evals/: README.md
dde-control-center-development/references/: architecture.md  cpp-api.md  debugging.md  plugin-development.md  qml-api.md
dde-shell-development/: SKILL.md  design.md  layershell.md  plugin-development.md  verification-plan.md
dde-shell-development/api/: core.md  index.md  qml-api.md
dde-shell-development/evals/: README.md
dde-shell-plugin-creator/: SKILL.md
dde-shell-plugin-creator/references/: applet-types.md  cmake-guide.md  cpp-api.md  dapplet-bridge.md  dconfig-guide.md  debian-packaging.md  metadata-spec.md  plugin-structure.md  qml-api.md  translation-guide.md
dde-shell-plugin-creator/templates/: CMakeLists.txt.template  applet.cpp.template  applet.h.template  dconfig.json.template  debian-control.template  debian-rules.template  main.qml.template
dde-tray-development/: SKILL.md
dtk/: SKILL.md
dtk-development/: SKILL.md  verification-plan.md  verification-report.md
linglong-runtime-update/: SKILL.md
remote-dev-sync/: SKILL.md
uos-pms-bug-workflow-trigger/: SKILL.md  requirements.txt
weather-tray-plugin/: CMakeLists.txt  README.md  weather.qrc  weatherapplet.cpp  weatherapplet.h  weatherdata.cpp  weatherdata.h  weatherplugin.cpp  weatherplugin.h  weatherwidget.cpp  weatherwidget.h
(+303 files in other folders)
